2006-02-02  Emile Snyder  <emile@alumni.reed.edu>

	* merge.cc (resolve_merge_conflicts): If the merge has non-content
	conflicts warn the user and abort before making them do content
	merges.  Move logging/warning of conflicts to methods in the
	roster_merge_result struct.

	* roster_merge.{cc,hh} (log_conflicts,
	warn_non_content_conflicts): New methods to do the busy work of
	logging or warning.

2006-02-02  Emile Snyder  <emile@alumni.reed.edu>

	* netsync.cc (run_netsync_protocol): Print a warning if either the
	include or the exclude branch pattern have a ' or a " character
	anywhere in them.  Hopefully will help users running in a Windows
	shell when they do: monotone sync myserver 'mybranch*' and nothing
	happens because the ' characters are passed in to monotone.
	
2005-01-30  Emile Snyder  <emile@alumni.reed.edu>

	* annotate.cc: (do_annotate) Add ticker for revisions processed to
	annotate command.
	
2006-01-29  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Update a few translations, leave a number of fuzzy
	ones until we've decided how "workspace" should be translated.

2006-01-27  Matthew Gregan  <kinetik@orcon.net.nz>

	* *: Use the term 'workspace' consistently throughout monotone for
	the concept we previously described interchangably using the two
	terms 'working copy' and 'working directory'.  This change has
	been made everywhere except in historical documentation (NEWS and
	ChangeLog).

2006-01-27  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Generating Keys): Correct small type, the keys
	are not stored in /home/jim/.monotone/monotonerc.

2006-01-26  Derek Scherger  <derek@echologic.com>

	* app_state.{cc,hh}: 
	* commands.cc (log): 
	* monotone.cc: 
	* options.hh: allow --next to view upcoming changes
	* tests/t_log_depth.at: rename to ...
	* tests/t_log_last_next.at: ... this since log now uses
	--last/--next and not --depth
	* testsuite.at: rename t_log_depth.at to t_log_last_next.at
	